feat: agregar pruebas para la API de scraper, incluyendo autenticación y manejo de errores

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,4 +3,5 @@ DJANGO_SETTINGS_MODULE = config.settings.test
 python_files = test_*.py *_test.py
 testpaths =
     src/apps/users
+    src/apps/shared
 
